--- a/config/boards/shields/artsyfartsy/artsyfartsy_right.conf
+++ b/config/boards/shields/artsyfartsy/artsyfartsy_right.conf
@@ -14,3 +14,7 @@ CONFIG_BT_MAX_CONN=6
 
 # Turn off sleep
 CONFIG_ZMK_SLEEP=n
+
+# Uncomment to enable encoder
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
