--- a/config/ardux.dtsi
+++ b/config/ardux.dtsi
@@ -577,7 +577,7 @@ right_encoder: encoder_right {
 
 sensors {
         compatible = "zmk,keymap-sensors";
-        sensors = <&left_encoder>;
+        sensors = <&left_encoder &right_encoder>;
     };
 	
 }; 
