--- a/config/artsyfartsy/artsyfartsy.conf
+++ b/config/artsyfartsy/artsyfartsy.conf
@@ -12,10 +12,10 @@ CONFIG_BT_MAX_CONN=6
 # Turn off sleep
 CONFIG_ZMK_SLEEP=n
 
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
