--- a/config/boards/shields/artsyfartsy/artsyfartsy.conf
+++ b/config/boards/shields/artsyfartsy/artsyfartsy.conf
@@ -10,9 +10,9 @@ CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
 CONFIG_BT_MAX_CONN=6
 
 # Enable display (layer in use is helpful)
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 
 # Turn off sleep
 CONFIG_ZMK_SLEEP=n
 
-CONFIG_EC11=y
+CONFIG_EC11=n
