--- a/config/boards/shields/artsyfartsy/artsyfartsy_left.conf
+++ b/config/boards/shields/artsyfartsy/artsyfartsy_left.conf
@@ -10,11 +10,11 @@ CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
 CONFIG_BT_MAX_CONN=6
 
 # Enable display (layer in use is helpful)
-# CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY=n
 
 # Turn off sleep
 CONFIG_ZMK_SLEEP=n
 
 # Uncomment to enable encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
